--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -833,8 +833,8 @@ background-image:url(%%cccheer%%);
 
 a[href|="/ccifies"] {
 float:left;
-width:148px;
-height:136px;
+width:121px;
+height:123px;
 background-repeat:no-repeat;
 background-image:url(%%ccifies%%);
 }
@@ -887,12 +887,28 @@ background-repeat:no-repeat;
 background-image:url(%%ccinabox%%);
 }
 
-a[href|="/dickchaser"] {
+a[href|="/chaserdance"] {
 float:left;
 width:70px;
 height:114px;
 background-repeat:no-repeat;
 background-image:url(%%dickchaser%%);
+}
+
+a[href|="/cozychaser"] {
+float:left;
+width:180px;
+height:216px;
+background-repeat:no-repeat;
+background-image:url(%%WinterChaser%%);
+}
+
+a[href|="/ccconfused"] {
+float:left;
+width:144px;
+height:259px;
+background-repeat:no-repeat;
+background-image:url(%%ccconfused%%);
 }
 
 /*un-assigned end*/
@@ -923,7 +939,7 @@ a.author[href$="BurChaBow"]:before{
     visibility:visible!important;  
     }
 
-a.author[href$="BurChaBow"]:before {content:"burchy-san"}
+a.author[href$="BurChaBow"]:before {content:"ヽ༼✿ຈل͜ຈ༽ﾉ-chan"}
 
 a.author[href$="durpyDash"] {  
 font-size:0!important;  
@@ -949,7 +965,7 @@ a.author[href$="-20"]:before{
 font-size:12px!important;
 visibility:visible!important;
 }
-a.author[href$="-20"]:before {content:"waffle-chan"}
+a.author[href$="-20"]:before {content:"ಠ_ಠ"}
 
 a.author[href$="cowofdoom"] {
 font-size:0!important;
@@ -961,4 +977,4 @@ a.author[href$="cowofdoom"]:before{
 font-size:12px!important;
 visibility:visible!important;
 }
-a.author[href$="cowofdoom"]:before {content:"Saint Cowchaser-sama"}
+a.author[href$="cowofdoom"]:before {content:"ヽ༼ຈل͜ຈ༽ﾉ"}
