--- a/source-css/hugemotes.css
+++ b/source-css/hugemotes.css
@@ -28,7 +28,7 @@ a[href|="/appledashhug"], a[href|="/dashcadancelove"], a[href|="/diamondrumbleki
 {background-image:url(%%150x150a%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
-a[href|="/flowerpowerhug"], a[href|="/fflutterdashhug"], a[href|="/pinkmuffinhug"]
+a[href|="/flowerpowerhug"], a[href|="/fflutterdashhug"], a[href|="/pinkmuffinhug"], a[href|="/flutterdashsnuzzle"], a[href|="/firedashhug"]
 {background-image:url(%%200x200a%%);width:200px;height:200px;display:block;float:left;}
 
 /* 250x250a 'motes. */
@@ -52,11 +52,11 @@ a[href|="/diamondrumblekiss"], a[href|="/pinkmuffinhug"]
 {Background-position: -200% 0%;}
 
 /* Grid pos 0,1 'motes. */
-a[href|="/twilightspikesmile"]
+a[href|="/twilightspikesmile"], a[href|="/flutterdashsnuzzle"]
 {Background-position: 0% -100%;}
 
 /* Grid pos 1,1 'motes. */
-a[href|="/shinelightsnuggle"]
+a[href|="/shinelightsnuggle"], a[href|="/firedashhug"]
 {Background-position: -100% -100%;}
 
 /* Misfits a */
