--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1980,6 +1980,7 @@ a[href|="/mspscootaloo"],
 a[href|="/mspapplebloom"],
 a[href|="/keytarsolo"],
 a[href|="/o_o"],
+a[href|="/itsnotmyblood"],
 a[href|="/yuubutts"],
 a[href|="/teiyourenaked"]
 {
@@ -2070,6 +2071,11 @@ a[href|="/o_o"]
 {
 	width: 103px;
 	background-position: -381px -280px;
+}
+a[href|="/itsnotmyblood"]
+{
+	width: 119px;
+	background-position: -484px -280px;
 }
 a[href|="/yuubutts"]
 {
