--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -167,13 +167,13 @@ body a[href="/spoiler"]:hover{color:white!important}/* Spoiler Setter*/
 div.over18 .entry .buttons .first{padding-left: 0px}
 .footer-parent
 {
- height:790px;
+ height:500px;
  padding-bottom:0px;
  clear:both;
  text-align:center;
  width:100%;
-/*Footer image by DestinyProgenitor on Deviant Art*/
- background-image:url(%%bee%%);
+/*Footer image by /u/DoctorDerpy*/
+ background-image:url(%%DoctorDerpy%%);
  background-repeat:no-repeat;
  margin-bottom:-80px;
  background-position: 50% 100%;
