--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -894,6 +894,16 @@ a[href|="/offend"] {
     background-position: 0px -350px;
     }
 
+a[href|="/roseluck3"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 150px;
+    background-image: url(%%emotesquare%%) !important;
+    background-position: -150px -350px;
+    }
+
 
 /* ------MACROS------- */
 a[href="/scumbagrando"] {
