--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -57,7 +57,7 @@ Height: 78px;
 background-image: url(%%spikehmph%%) !important
 }
 
-a[href="/fluttersquint"] {
+a[href="/fluttersquint"], a[href="/fssquint"] {
 background-position: 0px 0px;
 Display: block;
 Clear: none;
