--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -15,21 +15,21 @@ a.author[href$="Isaaccclark"]:after{content:" - User of the Month Oct. 2013"}
 
 
 
-/*
-a.author[href$=Dr_appleman] {
+
+a.author[href$=Captain_Awesomex] {
 font-size: 0 !important;
     overflow: hidden;
     display: inline-block;
     content: ""
 }
 
-a.author[href$=Dr_appleman]:before {
-    content: "LANDLUBBER";
+a.author[href$=Captain_Awesomex]:before {
+    content: "Cappy";
     font-size: 12px;
 
 }
 
-*/
+
 
 /*
 
