--- a/source-css/spitquisition.css
+++ b/source-css/spitquisition.css
@@ -301,6 +301,17 @@ width: 150px;
 height: 150px;
 background-image: url(%%spitglee%%);
 }
+a[href|="/sfunamused"] {
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 182px;
+background-image: url(%%sfunamused%%);
+}
+
+
+
 
 
 /*Rainbow Dash Emotes*/
