--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -2204,3 +2204,12 @@ a[href|="/fluttertavimane"] {
  height: 119px;
  background-image: url(%%CUTAYEMOTE%%);
 } 
+
+a[href|="/tavirarityhuggle"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 229px;
+ height: 150px;
+ background-image: url(%%tavirarityhuggle%%);
+} 
